--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-image: url('images/X_Icon.jgp'); /* Imagem de fundo */
+    background-image: url('images/fundogradient.jpg'); /* Imagem de fundo */
     background-size: cover;
     background-position: center;
     background-blend-mode: overlay;
@@ -22,25 +22,55 @@ body {
 
 /* Container principal */
 .container {
-    background-color: white;
+    background-color: transparent;
+    background: linear-gradient(135deg, rgba(4, 57, 113, 0.8), rgba(77, 136, 161, 0.6));
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     width: 100%;
     max-width: 600px;
     z-index: 1;
+    backdrop-filter: blur(10px); /* Efeito vidro fosco */
+    border: none;
 }
 
 /* Títulos */
 h1, h2 {
     text-align: center;
-    color: #0B2639;
+    color: #ffffff;
     font-weight: bold;
 }
 
 h1 .x {
-    color: #497D4F;
+    color: #041f77;
 }
+
+.button-container {
+    margin-top: 20px;
+}
+
+.animated-button {
+    width: 100%;
+    padding: 15px;
+    margin: 10px 0;
+    background: linear-gradient(135deg, rgba(3, 42, 84, 0.8), rgba(77, 136, 161, 0.6));
+    color: white;
+    border: none;
+    border-radius: 8px;
+    font-size: 18px;
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+}
+
+.animated-button:hover {
+    background-color: #62653e;
+    transform: scale(1.05);
+}
+
+.animated-button:active {
+    transform: scale(0.95);
+}
+
 
 /* Formulário */
 .form-container {
@@ -68,7 +98,7 @@ form button {
 }
 
 form button:hover {
-    background-color: #3e653f;
+    background-color: #b8bcb9;
 }
 
 /* Lista de contatos */
@@ -121,10 +151,7 @@ li button:hover {
     text-decoration: underline;
 }
 
-/* Adicionando uma borda sutil ao redor da página */
-.container {
-    border: 2px solid #497D4F;
-}
+
 
 /* Adicionando um efeito de sombra sutil à página */
 body {
@@ -162,3 +189,24 @@ body::after {
 #view-all-button:hover {
     background-color: #3e653f;
 }
+
+.footer {
+    position: fixed;
+    bottom: 10px;
+    left: 10px; /* Alterado para o canto esquerdo */
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    font-size: 14px;
+    color: white;
+    
+    padding: 5px 10px;
+    border-radius: 8px;
+}
+
+.footer-logo {
+    width: 30px; /* Tamanho da imagem */
+    height: auto;
+    border-radius: 50%;
+}
+
